RESOLVED FIXED41099
Assertion failure: !m_suspended when XMLHttpRequest fails
https://bugs.webkit.org/show_bug.cgi?id=41099
Summary Assertion failure: !m_suspended when XMLHttpRequest fails
Alexey Proskuryakov
Reported 2010-06-23 13:51:40 PDT
Some XMLHttpRequest failures are scheduled via a timer that isn't suspended by setDefersLoading(), so it can fire below an alert, or in other situations when loading callbacks are not expected. I could not find a way to make this cause bad problems, but it seems likely that it could.
Attachments
proposed fix (10.26 KB, patch)
2010-06-23 13:58 PDT, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2010-06-23 13:58:46 PDT
Created attachment 59559 [details] proposed fix
WebKit Review Bot
Comment 2 2010-06-23 14:02:47 PDT
Attachment 59559 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style', '--no-squash']" exit_code: 1 WebCore/platform/network/ResourceHandle.cpp:82: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alexey Proskuryakov
Comment 3 2010-06-23 14:03:01 PDT
Of course, this problem is general, and not limited to XMLHttpRequest. But other code doesn't seem to have such assertions.
Alexey Proskuryakov
Comment 4 2010-06-24 10:02:06 PDT
Note You need to log in before you can comment on or make changes to this bug.