WebCore/platform/network/ResourceHandle.cpp
@@ -69,7 +69,7 @@ PassRefPtr<ResourceHandle> ResourceHandle::create(const ResourceRequest& request
 
 void ResourceHandle::scheduleFailure(FailureType type)
 {
-    d->m_failureType = type;
+    d->m_scheduledFailureType = type;
     d->m_failureTimer.startOneShot(0);
 }
 
@@ -78,11 +78,16 @@ void ResourceHandle::fireFailure(Timer<ResourceHandle>*)
     if (!client())
         return;
 
-    switch (d->m_failureType) {
+    switch (d->m_scheduledFailureType) {
+        case NoFailure:
+            ASSERT_NOT_REACHED();
+            return;
         case BlockedFailure:
+            d->m_scheduledFailureType = NoFailure;
             client()->wasBlocked(this);
             return;
         case InvalidURLFailure:
+            d->m_scheduledFailureType = NoFailure;
             client()->cannotShowURL(this);
             return;
     }
@@ -136,6 +141,25 @@ bool ResourceHandle::shouldContentSniffURL(const KURL& url)
 void ResourceHandle::forceContentSniffing()
 {
     shouldForceContentSniffing = true;
+}
+
+void ResourceHandle::setDefersLoading(bool defers)
+{
+    LOG(Network, "Handle %p setDefersLoading(%s)", this, defers ? "true" : "false");
+
+    ASSERT(d->m_defersLoading != defers); // Deferring is not counted, so calling setDefersLoading() repeatedly is likely to be in error.
+    d->m_defersLoading = defers;
+
+    if (defers) {
+        ASSERT(d->m_failureTimer.isActive() == (d->m_scheduledFailureType != NoFailure));
+        if (d->m_failureTimer.isActive())
+            d->m_failureTimer.stop();
+    } else if (d->m_scheduledFailureType != NoFailure) {
+        ASSERT(!d->m_failureTimer.isActive());
+        d->m_failureTimer.startOneShot(0);
+    }
+
+    platformSetDefersLoading(defers);
 }
 
 #if !USE(SOUP)
