WebCore/platform/network/ResourceHandleInternal.h
@@ -133,6 +133,7 @@ namespace WebCore {
             , m_needsSiteSpecificQuirks(false)
             , m_currentMacChallenge(nil)
 #endif
+            , m_scheduledFailureType(ResourceHandle::NoFailure)
             , m_failureTimer(loader, &ResourceHandle::fireFailure)
         {
             const KURL& url = m_request.url();
@@ -220,7 +221,7 @@ namespace WebCore {
 #endif
         AuthenticationChallenge m_currentWebChallenge;
 
-        ResourceHandle::FailureType m_failureType;
+        ResourceHandle::FailureType m_scheduledFailureType;
         Timer<ResourceHandle> m_failureTimer;
     };
 
