WebCore/platform/network/android/ResourceHandleAndroid.cpp
@@ -83,7 +83,7 @@ bool ResourceHandle::supportsBufferedData()
     return false;
 }
 
-void ResourceHandle::setDefersLoading(bool defers)
+void ResourceHandle::platformSetDefersLoading(bool)
 {
     notImplemented();
 }
